syntax = "proto3";

package syft.lib.adp;
import "proto/core/common/common_object.proto";

message Entity {
  string unique_name = 1;
  syft.core.common.UID id = 2;
}
